Bring channels to v1
