# src/Http/Requests/Products/UpdateRequest.php
@@ -4,6 +4,7 @@ namespace GetCandy\Api\Http\Requests\Products;
 
 use GetCandy;
 use GetCandy\Api\Http\Requests\FormRequest;
+use GetCandy\Api\Core\Channels\Actions\FetchDefaultChannel;
 
 class UpdateRequest extends FormRequest
 {
@@ -31,7 +32,7 @@ class UpdateRequest extends FormRequest
         ];
 
         $attributes = GetCandy::products()->getAttributes($this->product);
-        $defaultChannel = GetCandy::channels()->getDefaultRecord();
+        $defaultChannel = FetchDefaultChannel::run();
         $defaultLanguage = GetCandy::languages()->getDefaultRecord();
 
         foreach ($attributes as $attribute) {
