# src/Http/Resources/Categories/CategoryResource.php
@@ -2,11 +2,11 @@
 
 namespace GetCandy\Api\Http\Resources\Categories;
 
+use GetCandy\Api\Core\Channels\Resources\ChannelCollection;
 use GetCandy\Api\Http\Resources\AbstractResource;
 use GetCandy\Api\Http\Resources\Assets\AssetCollection;
 use GetCandy\Api\Http\Resources\Assets\AssetResource;
 use GetCandy\Api\Http\Resources\Attributes\AttributeCollection;
-use GetCandy\Api\Http\Resources\Channels\ChannelCollection;
 use GetCandy\Api\Http\Resources\Customers\CustomerGroupCollection;
 use GetCandy\Api\Http\Resources\Layouts\LayoutResource;
 use GetCandy\Api\Http\Resources\Products\ProductCollection;
