# src/Http/Resources/Collections/CollectionResource.php
@@ -2,10 +2,10 @@
 
 namespace GetCandy\Api\Http\Resources\Collections;
 
+use GetCandy\Api\Core\Channels\Resources\ChannelCollection;
 use GetCandy\Api\Http\Resources\AbstractResource;
 use GetCandy\Api\Http\Resources\Assets\AssetCollection;
 use GetCandy\Api\Http\Resources\Attributes\AttributeCollection;
-use GetCandy\Api\Http\Resources\Channels\ChannelCollection;
 use GetCandy\Api\Http\Resources\Customers\CustomerGroupCollection;
 use GetCandy\Api\Http\Resources\Products\ProductCollection;
 use GetCandy\Api\Http\Resources\Routes\RouteCollection;
